[gd_scene load_steps=4 format=2]

[ext_resource path="res://Naub.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SphereMesh" id=3]
radius = 10.0
height = 20.0

[node name="RigidBody2D" type="RigidBody2D" groups=["Naub"]]
position = Vector2( 155, 101 )
input_pickable = true
contacts_reported = 1
contact_monitor = true
linear_damp = 0.5
angular_damp = 0.5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
mesh = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_RigidBody2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RigidBody2D_mouse_exited"]
